test/kobra-code/syntax-errors/dec-without-commas.ks
$ a = 10,
  b = 10  >> b is also declared (',')
  c = 10, >> c is followed by unnecessary comma 
  d = 10

